Added run information to readme